--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <img src="img/logo1.svg" class="logo">
-        <div id="'div-desaparece" class="botoes-home">
+        <div id= "div-desaparece" class="botoes-home">
            <a href="#forca"><input class="btn-iniciar" type="submit" value="Iniciar Jogo" id="iniciar-jogo" >
            </a> 
            <button class="btn-palavra" id="nova-palavra" onclick="mostrarTelaAdicionarPalavra()">Adicionar Palavra</button>
